fixed transport box alignment and remove background image for timeline

--- a/static/editor.css
+++ b/static/editor.css
@@ -79,7 +79,6 @@
 #timeStart, #timeEnd {
     display: flex;
     margin: 15px;
-    background-color: white;
     padding-left: 10px;
     padding-top: 5px;
     padding-right: 10px;
@@ -110,6 +109,7 @@
 #transportBox{
     display: flex;
     justify-content: center;
+    padding-left: 50px;
 }
 
 #activityBox, #transportBox, #addExtra {
